--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>ページが表示できません (500)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .error-container {
+      text-align: center;
+      color: #66615b;
+    }
+    .error-footer {
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: #f5f5f5;
+      height: 100px;
+      padding-top: 20px;
+    }
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
+  <div class="error-container">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>
+        一時的なエラーが発生しました。
+      </h1>
+      <p>
+        ご不便をおかけし申し訳ございません。<br>
+        このページが繰り返し表示される場合は、<br>
+        <a href="mailto:official.friendsreview@gmail.com">official.friendsreview@gmail.com</a><br>
+        までお問い合わせいただけますと幸いです。
+      </p>
+      <p>
+        <a href="https://www.friends-review.com">ホームへ</a>
+      </p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <div class="error-footer">
+      <small>
+        2019 みんなの通信簿運営団体
+      </small>
+    </div>
   </div>
 </body>
 </html>
